# Co-DETR-TensorRT

./: .clang-format  CMakeLists.txt  Dockerfile  INSTALL_LOCAL.md  LICENSE  README.md  codetr_inference.cpp  export.py  setup.py
codetr/: __init__.py  co_dino_head.py  codetr.py  export.py  inferencer.py  multi_scale_deform_attn.py  multi_scale_deformable_attention.py  ops.py  positional_encoding.py  swin.py  transformer.py  transformer_mmcv.py  transformer_utils.py
codetr/csrc/: CMakeLists.txt  deformable_attention_kernel.cu  deformable_attention_plugin.cpp  deformable_attention_torch.cpp  ms_deform_attn.cu
codetr/csrc_tests/: CMakeLists.txt  common.py  common_runtime.py  test_plugin.cpp  test_plugin.py
codetr/ops/: __init__.py  multi_scale_deform_attn.py  ops.py
codetr/ops/csrc/: ms_deformable_attn.cpp  ms_deformable_attn_kernel.cu
codetr/ops/include/: ms_deform_attn_cuda_kernel.cuh
codetr/ops/src/: ms_deform_attn.cpp  ms_deform_attn_cuda.cu
configs/: co_dino_5scale_r50_lsj_8xb2_1x_coco.py  co_dino_5scale_swin_l_16xb1_16e_o365tococo.py
csrc_tests/: CMakeLists.txt  common.py  common_runtime.py  conftest.py  test_plugin.cpp  test_plugin.py
extension_cpp/: setup.py
extension_cpp/codetr_cpp/: ops.py
extension_cpp/codetr_cpp/csrc/: ms_deform_attn.cpp  ms_deform_attn_cuda.cu
extension_cpp/test/: test.py
notebooks/: dev-torch_tensorrt.ipynb  torch_tensorrt_tutorial.ipynb
tests/: helpers.py  test.py  test_export.py  test_ms_deform_attn.py  test_ms_deformable_attn.py  test_multi_scale_deformable_attention.py
